<resources>
    <string name="app_name">Peace</string>
    <string name="app_name_lower">peace</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="require_login">로그인이 필요합니다.</string>

    <string name="menu_reservation">예약 내역</string>
    <string name="menu_mileage">마일리지</string>
    <string name="menu_favorite">찜</string>

    <string name="menu_info">공공 시설물</string>
    <string name="menu_reserve">시설물 예약</string>
    <string name="menu_etc">고객 센터</string>
    <string name="title_activity_login">Sign in</string>

    <string name="login_id_text">아이디</string>
    <string name="login_pw_text">비밀번호</string>

    <string name="toolbar_close">닫기</string>
    <string name="toolbar_title">상세 보기</string>

    <string name="detail_button">자세히 보기</string>
    <string name="place_reserve_bt">예약 하기</string>

    <string name="stepper_prev_text">이전</string>
    <string name="stepper_next_text">다음</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
